--- a/build.gradle
+++ b/build.gradle
@@ -98,7 +98,7 @@ dependencies {
     compileOnly "mezz.jei:jei-$minecraft_version-neoforge-api:19.21.0.247"
     localRuntime "mezz.jei:jei-$minecraft_version-neoforge:19.21.0.247"
 
-    implementation "maven.modrinth:new_world:1.7.2"
+    compileOnly "maven.modrinth:new_world:1.7.2"
 
     compileOnly "maven.modrinth:the-block-box:0.1.1"
 
@@ -110,7 +110,7 @@ dependencies {
     compileOnly "maven.modrinth:curios:9.5.1+1.21.1"
 
     compileOnly "maven.modrinth:no-mans-land:1.3.1"
-    implementation "com.terraformersmc:biolith-neoforge:3.0.1"
+    compileOnly "com.terraformersmc:biolith-neoforge:3.0.1"
     compileOnly "maven.modrinth:mixed-litter:0.1.2"
 
     compileOnly "curse.maven:enderscape-536638:6738966"
